--- a/clients/package.json
+++ b/clients/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -23,6 +24,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/routers": "^6.1.9",
     "@react-navigation/stack": "^6.3.29",
+    "@ui-kitten/components": "^5.3.1",
     "axios": "^1.7.2",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
@@ -40,6 +42,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
