--- a/clients/package.json
+++ b/clients/package.json
@@ -53,6 +53,7 @@
     "react-native-svg": "^9.13.6",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-webrtc": "^124.0.1",
     "twilio-video": "^2.28.1"
   },
   "devDependencies": {
