auth google partie 1

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,6 @@
 PORT=8800
 MONGODB_URI=mongodb://127.0.0.1:27017/medimeet
 JWT_SECRET=medimeet
+GOOGLE_CLIENT_ID=363138739274-4b84ptcnm44lbc15q5hbo9do7rv5j2jd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:8800/auth/google/callback
