--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "twilio": "^5.2.0"
   },
   "devDependencies": {
