--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.7.5",
     "twilio": "^5.2.0"
   },
   "devDependencies": {
