--- a/clients/package.json
+++ b/clients/package.json
@@ -54,6 +54,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-native-webrtc": "^124.0.1",
+    "socket.io-client": "^4.7.5",
     "twilio-video": "^2.28.1"
   },
   "devDependencies": {
