--- a/clients/package.json
+++ b/clients/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-calendars": "^1.1305.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "~3.10.1",
