--- a/clients/package.json
+++ b/clients/package.json
@@ -34,6 +34,7 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
