--- a/clients/package.json
+++ b/clients/package.json
@@ -35,6 +35,7 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
