--- a/clients/package.json
+++ b/clients/package.json
@@ -48,7 +48,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-calendar-heatmap": "^0.2.4",
     "react-native-calendars": "^1.1305.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
