--- a/clients/package.json
+++ b/clients/package.json
@@ -61,6 +61,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.3.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-native-webrtc": "^124.0.1",
