--- a/clients/package.json
+++ b/clients/package.json
@@ -66,6 +66,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webrtc": "^124.0.1",
     "socket.io-client": "^4.7.5",
+    "twilio": "^5.2.2",
     "twilio-video": "^2.28.1"
   },
   "devDependencies": {
