--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,6 @@ JWT_SECRET=medimeet
 GOOGLE_CLIENT_ID=363138739274-4b84ptcnm44lbc15q5hbo9do7rv5j2jd.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:8800/auth/google/callback
+TWILIO_ACCOUNT_SID=AC4e7a38cd9fff01853d513dbb62ebc3c8
+TWILIO_API_KEY=SKe811ef06816a4fa30a20bf389cb3355e
+TWILIO_API_SECRET=GD7MKsIm4XkJWhLjQzK0BU7a93oio6MM
