--- a/clients/package.json
+++ b/clients/package.json
@@ -68,7 +68,8 @@
     "react-native-webrtc": "^124.0.1",
     "socket.io-client": "^4.7.5",
     "twilio": "^5.2.2",
-    "twilio-video": "^2.28.1"
+    "twilio-video": "^2.28.1",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
