--- a/clients/package.json
+++ b/clients/package.json
@@ -38,7 +38,9 @@
     "date-fns-tz": "^3.1.3",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "^12.0.2",
     "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
@@ -53,10 +55,14 @@
     "react-native-calendar-heatmap": "^0.2.4",
     "react-native-calendars": "^1.1305.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.19",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pdf": "^6.7.5",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -66,10 +72,10 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-native-webrtc": "^124.0.1",
+    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^4.7.5",
     "twilio": "^5.2.2",
-    "twilio-video": "^2.28.1",
-    "expo-image-picker": "~15.0.7"
+    "twilio-video": "^2.28.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
